# ProcureMind

./: .env.example  .gitignore  README.md  docker-compose.yml  list_models.py  pyproject.toml  requirements.txt  schema.sql  streamlit_app.py  test.md  verify_update.py
.claude/: settings.local.json
.planning/: PROJECT.md  config.json
.planning/research/: FEATURES.md
logic/: database.py  parser.py
pages/: 0_Settings.py  1_RFQ_Manager.py  2_Log_Quote.py  3_RFQ_Analysis.py  4_Finalization.py
